--- a/test/TASKING_GenericSTMF070RB_RTTD/.cproject
+++ b/test/TASKING_GenericSTMF070RB_RTTD/.cproject
@@ -29,6 +29,8 @@
 								<option id="com.tasking.arm.cc.definedSymbols.424903710" name="Defined symbols" superClass="com.tasking.arm.cc.definedSymbols" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="TRICE_VARIANT=SEGGER_RTTD"/>
 								</option>
+								<option id="com.tasking.arm.cc.optimize.1817167599" superClass="com.tasking.arm.cc.optimize" value="com.tasking.arm.cc.optimize.3" valueType="enumerated"/>
+								<option id="com.tasking.arm.cc.tradeoff.1287104379" superClass="com.tasking.arm.cc.tradeoff" value="com.tasking.arm.cc.tradeoff.0" valueType="enumerated"/>
 								<inputType id="com.tasking.arm.cppInputType.1119695499" name="C++" superClass="com.tasking.arm.cppInputType"/>
 								<inputType id="com.tasking.arm.cpp.cInputType.1799934759" name="C" superClass="com.tasking.arm.cpp.cInputType"/>
 								<inputType id="com.tasking.arm.cc.msInputType.1941306116" name="MS" superClass="com.tasking.arm.cc.msInputType"/>
