--- a/test/TASKING_RTTD_cpp_Example/.cproject
+++ b/test/TASKING_RTTD_cpp_Example/.cproject
@@ -6,27 +6,34 @@
 				<externalSettings/>
 				<extensions>
 					<extension id="com.tasking.managedbuilder.TASKING_ELF" point="org.eclipse.cdt.core.BinaryParser"/>
+					<extension id="com.tasking.managedbuilder.TASKING_IHEX" point="org.eclipse.cdt.core.BinaryParser"/>
+					<extension id="com.tasking.managedbuilder.TASKING_SRECORD" point="org.eclipse.cdt.core.BinaryParser"/>
 					<extension id="com.tasking.managedbuilder.TskRegexErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactExtension="abs" artifactName="TASKING_RTTD_cpp_Example" buildArtefactType="com.tasking.arm.buildArtefactType.elf" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=com.tasking.arm.buildArtefactType.elf" cleanCommand="&quot;${PRODDIR}/bin/rm&quot; -rf" description="" id="com.tasking.config.arm.abs.debug.977243869" name="Debug" parent="com.tasking.config.arm.abs.debug">
+				<configuration artifactName="${ProjName}" buildArtefactType="com.tasking.arm.buildArtefactType.elf" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=com.tasking.arm.buildArtefactType.elf" cleanCommand="&quot;${PRODDIR}/bin/rm&quot; -rf" description="" id="com.tasking.config.arm.abs.debug.977243869" name="Debug" parent="com.tasking.config.arm.abs.debug">
 					<folderInfo id="com.tasking.config.arm.abs.debug.977243869." name="/" resourcePath="">
 						<toolChain id="com.tasking.arm.abs.debug.123036571" name="TASKING VX-toolset for ARM" superClass="com.tasking.arm.abs.debug">
-							<option id="com.tasking.arm.prodDir.696892590" name="Product directory:" superClass="com.tasking.arm.prodDir" value="${eclipse_home}/.." valueType="string"/>
-							<option id="com.tasking.arm.pluginVersion.1667608011" name="Plugin version" superClass="com.tasking.arm.pluginVersion" value="1.194.0.0" valueType="string"/>
-							<targetPlatform archList="all" binaryParser="com.tasking.managedbuilder.TASKING_ELF" id="com.tasking.arm.platform.abs.debug.1914732900" name="Debug" osList="" superClass="com.tasking.arm.platform.abs.debug"/>
+							<option id="com.tasking.arm.pluginVersion.1667608011" name="Plugin version" superClass="com.tasking.arm.pluginVersion" value="0.0.0.0" valueType="string"/>
+							<option id="com.tasking.arm.cpu.1257798860" name="Processor:" superClass="com.tasking.arm.cpu" value="stm32f030r8" valueType="string"/>
+							<targetPlatform archList="all" id="com.tasking.arm.platform.abs.debug.1914732900" name="Debug" osList="" superClass="com.tasking.arm.platform.abs.debug"/>
 							<builder buildPath="${workspace_loc:/TASKING_RTTD_cpp_Example/Debug}" id="com.tasking.arm.builder.abs.debug.841151030" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="TASKING ARM Makefile generator" parallelBuildOn="true" parallelizationNumber="unlimited" superClass="com.tasking.arm.builder.abs.debug"/>
 							<tool id="com.tasking.arm.cc.abs.debug.217935682" name="C/C++ Compiler" superClass="com.tasking.arm.cc.abs.debug">
-								<option id="com.tasking.arm.cc.pr36858.137189516" name="workaround for PR36858" superClass="com.tasking.arm.cc.pr36858" value="true" valueType="string"/>
-								<option id="com.tasking.arm.cc.ioStreams.1117486453" name="Support for C++ I/O streams" superClass="com.tasking.arm.cc.ioStreams" value="true" valueType="boolean"/>
-								<option id="com.tasking.arm.cc.definedSymbols.769771215" name="Defined symbols" superClass="com.tasking.arm.cc.definedSymbols" valueType="definedSymbols">
+								<option id="com.tasking.arm.cc.ioStreams.1117486453" name="Support for C++ I/O streams" superClass="com.tasking.arm.cc.ioStreams" value="false" valueType="boolean"/>
+								<option id="com.tasking.arm.cc.language.gcc.354155459" name="Allow GNU C extensions" superClass="com.tasking.arm.cc.language.gcc" value="false" valueType="boolean"/>
+								<option id="com.tasking.arm.cc.pr36858.762971041" name="workaround for PR36858" superClass="com.tasking.arm.cc.pr36858" value="true" valueType="string"/>
+								<option id="com.tasking.arm.cc.definedSymbols.1311176412" name="Defined symbols" superClass="com.tasking.arm.cc.definedSymbols" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="TRICE_VARIANT=SEGGER_RTTD"/>
 								</option>
-								<option id="com.tasking.arm.cc.includePaths.1002741270" superClass="com.tasking.arm.cc.includePaths" valueType="includePath">
+								<option id="com.tasking.arm.cc.includePaths.1495556093" name="Include paths" superClass="com.tasking.arm.cc.includePaths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;C:\repos\trice\third_party\SEGGER_RTT_V672b\RTT&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\repos\trice\srcTrice.C&quot;"/>
 								</option>
+								<option id="com.tasking.arm.cc.defaultHeaderFile.1451752924" name="Include CMSIS device register definition header file" superClass="com.tasking.arm.cc.defaultHeaderFile" value="false" valueType="boolean"/>
+								<option id="com.tasking.arm.cc.gxx.993373524" name="Allow GNU C++ extensions" superClass="com.tasking.arm.cc.gxx" value="true" valueType="boolean"/>
+								<option id="com.tasking.arm.cc.optimize.706820923" superClass="com.tasking.arm.cc.optimize" value="com.tasking.arm.cc.optimize.3" valueType="enumerated"/>
+								<option id="com.tasking.arm.cc.tradeoff.227880367" superClass="com.tasking.arm.cc.tradeoff" value="com.tasking.arm.cc.tradeoff.0" valueType="enumerated"/>
 								<inputType id="com.tasking.arm.cppInputType.1676419982" name="C++" superClass="com.tasking.arm.cppInputType"/>
 								<inputType id="com.tasking.arm.cpp.cInputType.972878064" name="C" superClass="com.tasking.arm.cpp.cInputType"/>
 								<inputType id="com.tasking.arm.cc.msInputType.133557667" name="MS" superClass="com.tasking.arm.cc.msInputType"/>
@@ -41,20 +48,15 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="trice|SeggerRTT" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="SeggerRTT"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="trice"/>
+						<entry excluding="Startup/ARM/ARMCM0/system_ARMCM0.c|Startup/ARM/ARMCM3/system_ARMCM3.c|trice|SeggerRTT" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
 			<storageModule moduleId="com.tasking.toolInfo">
-				<toolInfo>TASKING VX-toolset for ARM Cortex: object linker v5.2r1 Build 186 SN 08075645</toolInfo>
-				<toolInfo>TASKING VX-toolset for ARM Cortex: control program v5.2r1 Build 159</toolInfo>
-				<toolInfo>TASKING VX-toolset for ARM Cortex: C++ compiler v5.2r1 Build 115 SN 08075645</toolInfo>
 				<toolInfo>TASKING program builder v5.2r1 Build 101</toolInfo>
-				<toolInfo>TASKING VX-toolset for ARM Cortex: assembler v5.2r1 Build 182</toolInfo>
-				<toolInfo>TASKING VX-toolset for ARM Cortex: C compiler v5.2r1 Build 843 SN 08075645</toolInfo>
 			</storageModule>
 		</cconfiguration>
 		<cconfiguration id="com.tasking.config.arm.abs.release.176931105">
@@ -62,6 +64,8 @@
 				<externalSettings/>
 				<extensions>
 					<extension id="com.tasking.managedbuilder.TASKING_ELF" point="org.eclipse.cdt.core.BinaryParser"/>
+					<extension id="com.tasking.managedbuilder.TASKING_IHEX" point="org.eclipse.cdt.core.BinaryParser"/>
+					<extension id="com.tasking.managedbuilder.TASKING_SRECORD" point="org.eclipse.cdt.core.BinaryParser"/>
 					<extension id="com.tasking.managedbuilder.TskRegexErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 				</extensions>
 			</storageModule>
@@ -71,7 +75,7 @@
 						<toolChain id="com.tasking.arm.abs.release.912745245" name="TASKING VX-toolset for ARM" superClass="com.tasking.arm.abs.release">
 							<option id="com.tasking.arm.prodDir.223404961" name="Product directory:" superClass="com.tasking.arm.prodDir" value="${eclipse_home}/.." valueType="string"/>
 							<option id="com.tasking.arm.pluginVersion.1810660315" name="Plugin version" superClass="com.tasking.arm.pluginVersion" value="1.194.0.0" valueType="string"/>
-							<targetPlatform archList="all" binaryParser="com.tasking.managedbuilder.TASKING_ELF" id="com.tasking.arm.platform.abs.release.188698777" name="Release" osList="" superClass="com.tasking.arm.platform.abs.release"/>
+							<targetPlatform archList="all" id="com.tasking.arm.platform.abs.release.188698777" name="Release" osList="" superClass="com.tasking.arm.platform.abs.release"/>
 							<builder buildPath="${workspace_loc:/TASKING_RTTD_cpp_Example/Release}" id="com.tasking.arm.builder.abs.debug.965611094" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="TASKING ARM Makefile generator" parallelBuildOn="true" parallelizationNumber="unlimited" superClass="com.tasking.arm.builder.abs.debug"/>
 							<tool id="com.tasking.arm.cc.abs.release.1343582764" name="C/C++ Compiler" superClass="com.tasking.arm.cc.abs.release">
 								<option id="com.tasking.arm.cc.pr36858.898354729" name="workaround for PR36858" superClass="com.tasking.arm.cc.pr36858" value="true" valueType="string"/>
@@ -90,9 +94,9 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="trice|SeggerRTT" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="SeggerRTT"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="trice"/>
+						<entry excluding="Startup/ST/STM32F0xx/system_stm32f0xx.c|Startup/ARM/ARMCM0/system_ARMCM0.c|trice|SeggerRTT" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -119,7 +123,14 @@
 		</project-mappings>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/TASKING_RTTD_cpp_Example"/>
+		</configuration>
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/TASKING_RTTD_cpp_Example"/>
+		</configuration>
+	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		<profile id="org.eclipse.cdt.make.core.GCCStandardMakePerProjectProfile">
