--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
             "args": ["ds",
-                    "-lf",
+                    "-lg",
                     "${workspaceFolder}/pkg/disp/testdata/serverMutexTest.log"
             ]
         },
@@ -68,16 +68,36 @@
             ]
         },              
         {
-            "name": "-device Jlink",
+            "name": "-s JLINK",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
             "args": ["log",
-                     "-device",
-                     "JLinkRTTLogger",
-                     "-list",
+                     "-source",
+                     "JLINK",
+                     "-idlist",
+                     "${workspaceFolder}/test/til.json",
+                     "-key",
+                     "none"
+            ]
+        },
+        {
+            "name": "-s RND",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/trice",
+            "env": {},
+            "args": ["log",
+                     "-source",
+                     "RND",
+                     "-rndLimit",
+                     "5",
+                     "-rndMode"
+                     "BareModeNoSync"
+                     "-idlist",
                      "${workspaceFolder}/test/til.json",
                      "-key",
                      "none"
