--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -114,7 +114,7 @@
             "args": ["log",
                      "-device",
                      "SIM",
-                     "-list",
+                     "-idlist",
                      "${workspaceFolder}/test/til.json",
                      "-key",
                      "none"
@@ -132,32 +132,32 @@
                      "COM7",
                      "-baud",
                      "115200",
-                     "-list",
+                     "-idlist",
                      "${workspaceFolder}/test/til.json",
                      "-key",
                      "none"
             ]
         },       
         {
-            "name": "Launch trice receive -port",
+            "name": "trice l -source COM9",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
-            "args": ["receiver",
-                     "-port",
-                     "COM3",
+            "args": ["log",
+                     "-source",
+                     "COM9",
                      "-baud",
                      "115200",
-                     "-list",
+                     "-idlist",
                      "${workspaceFolder}/examples/til.json",
                      "-key",
                      "none"
             ]
         },       
         {
-            "name": "Launch trice remoteDisplay",
+            "name": "remoteDisplay",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -168,28 +168,31 @@
                      "COM38",
                      "-baud",
                      "115200",
-                     "-list",
+                     "-idlist",
                      "${workspaceFolder}/examples/til.json",
                      "-key",
                      "none"
             ]
         },
         {
-            "name": "Launch trice check",
+            "name": "check",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
             "args": ["check",
-                     "-list",
-                     "${workspaceFolder}/examples/til.json",
+                     "-idlist",
+                     "${workspaceFolder}/test/til.json",
+                     "-color",
+                     "xxxxxxxxxxalternate",
+                     "-v"
                      "-dataset",
                      "xxx"
             ]
         },
         {
-            "name": "Launch trice update",
+            "name": "update",
             "type": "go",
             "request": "launch",
             "mode": "auto",
@@ -199,7 +202,7 @@
                     "-v",
                     "-src",
                     "C:/repos/BTdev/STM32",
-                    "-list",
+                    "-idlist",
                     "c:/repos/BTdev/til.json"
             ]
         }
