--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -105,6 +105,22 @@
             ]
         },
         {
+            "name": "-s wrapTriceMsgs.bin",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/trice",
+            "env": {},
+            "args": ["log",
+                     "-s",
+                     "C:\\repos\\trice\\internal\\receiver\\rttfile\\testdata\\wrapTriceMsgs.bin",
+                     "-idlist",
+                     "${workspaceFolder}/test/til.json",
+                     "-key",
+                     "none"
+            ]
+        },        
+        {
             "name": "-device SIM",
             "type": "go",
             "request": "launch",
