--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,26 +16,6 @@
             ]
         },
         {
-            "name": "trice help",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/cmd/trice",
-            "env": {},
-            "args": ["help"
-            ]
-        },
-        {
-            "name": "Launch trice ver",
-            "type": "go",
-            "request": "launch",
-            "mode": "auto",
-            "program": "${workspaceFolder}/cmd/trice",
-            "env": {},
-            "args": ["ver"
-            ]
-        },
-        {
             "name": "Launch trice displayServer",
             "type": "go",
             "request": "launch",
@@ -58,13 +38,20 @@
             ]
         },
         {
-            "name": "Launch trice",
+            "name": "TestRNDChaosX",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
-            "args": [
+            "args": ["log",
+                "-idlist", "${workspaceFolder}/test/til.json",
+                "-source", "RND",
+                "-rndLimit", "10", 
+                "-rndMode", "ChaosMode",
+                "-color", "off", 
+                "-ts", "none",
+                "-key", "none",
             ]
         },              
         {
