--- a/test/MDK-ARM_RTT_NUCLEO-F030R8/MDK-ARM/MDK-ARM_RTT_NUCLEO-F030R8.uvprojx
+++ b/test/MDK-ARM_RTT_NUCLEO-F030R8/MDK-ARM/MDK-ARM_RTT_NUCLEO-F030R8.uvprojx
@@ -337,7 +337,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>TRICE_VARIANT=SEGGER_RTT, TRICE_RTT_BUFFER=0, USE_HAL_DRIVER,STM32F030x8</Define>
+              <Define>TRICE_VARIANT=SEGGER_RTT,USE_HAL_DRIVER,STM32F030x8</Define>
               <Undefine></Undefine>
               <IncludePath>../Inc;C:/ST/CubeMX/STM32Cube_FW_F0_V1.11.0/Drivers/STM32F0xx_HAL_Driver/Inc;C:/ST/CubeMX/STM32Cube_FW_F0_V1.11.0/Drivers/STM32F0xx_HAL_Driver/Inc/Legacy;C:/ST/CubeMX/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Device/ST/STM32F0xx/Include;C:/ST/CubeMX/STM32Cube_FW_F0_V1.11.0/Drivers/CMSIS/Include;..\..\..\srcTrice.C</IncludePath>
             </VariousControls>
@@ -551,19 +551,6 @@
       </Groups>
     </Target>
   </Targets>
-
-  <RTE>
-    <apis/>
-    <components>
-      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="5.4.0" condition="ARMv6_7_8-M Device">
-        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.7.0"/>
-        <targetInfos>
-          <targetInfo name="MDK-ARM_RTT_NUCLEO-F030R8"/>
-        </targetInfos>
-      </component>
-    </components>
-    <files/>
-  </RTE>
 
   <LayerInfo>
     <Layers>
