--- a/test/MDK-ARM_RTT_NUCLEO-F030R8/MDK-ARM/MDK-ARM_RTT_NUCLEO-F030R8.uvprojx
+++ b/test/MDK-ARM_RTT_NUCLEO-F030R8/MDK-ARM/MDK-ARM_RTT_NUCLEO-F030R8.uvprojx
@@ -545,12 +545,15 @@
             </File>
           </Files>
         </Group>
-        <Group>
-          <GroupName>::CMSIS</GroupName>
-        </Group>
       </Groups>
     </Target>
   </Targets>
+
+  <RTE>
+    <apis/>
+    <components/>
+    <files/>
+  </RTE>
 
   <LayerInfo>
     <Layers>
