--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -62,7 +62,6 @@
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
             "args": ["log",
-                     "-v",
                      "-source",
                      "JLINK",
                      "-idlist",
@@ -115,8 +114,10 @@
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
             "args": ["log",
-                     "-device",
-                     "SIM",
+                     "-s",
+                     "DUMMY",
+                     "-e",
+                     "sim",
                      "-idlist",
                      "${workspaceFolder}/test/til.json",
                      "-key",
