--- a/test/MDK-ARM_LL_RTTB_NUCLEO-F070RB/MDK-ARM/MDK-ARM_LL_RTTB_NUCLEO-F070RB.uvprojx
+++ b/test/MDK-ARM_LL_RTTB_NUCLEO-F070RB/MDK-ARM/MDK-ARM_LL_RTTB_NUCLEO-F070RB.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>MDK-ARM_LL_RTTB_NUCLEO-F070RB</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060750::V5.06 update 6 (build 750)::.\ARMCC</pCCUsed>
+      <pCCUsed>6140000::V6.14::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
