wip JLINK & UART working with bare

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -64,6 +64,7 @@
             "args": ["log",
                      "-port",
                      "JLINK",
+                     "-verbose"
                      "-idlist",
                      "${workspaceFolder}/til.json",
                      "-key",
