--- a/test/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8/MDK-ARM/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.uvprojx
+++ b/test/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8/MDK-ARM/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.uvprojx
@@ -434,9 +434,9 @@
               <FilePath>..\..\..\third_party\SEGGER_RTT\RTT\SEGGER_RTT.c</FilePath>
             </File>
             <File>
-              <FileName>triceBareFifoUART.c</FileName>
+              <FileName>triceBareFifo.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceBareFifoUART.c</FilePath>
+              <FilePath>..\..\..\srcTrice.C\triceBareFifo.c</FilePath>
             </File>
           </Files>
         </Group>
