--- a/test/MDK-ARM_LL_UART_ESC_NUCLEO-F030R8/MDK-ARM/MDK-ARM_LL_UART_ESC_NUCLEO-F030R8.uvprojx
+++ b/test/MDK-ARM_LL_UART_ESC_NUCLEO-F030R8/MDK-ARM/MDK-ARM_LL_UART_ESC_NUCLEO-F030R8.uvprojx
@@ -399,9 +399,9 @@
               <FilePath>..\..\..\srcTrice.C\triceCheck.c</FilePath>
             </File>
             <File>
-              <FileName>triceEscFifoUART.c</FileName>
+              <FileName>triceEscFifo.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceEscFifoUART.c</FilePath>
+              <FilePath>..\..\..\srcTrice.C\triceEscFifo.c</FilePath>
             </File>
             <File>
               <FileName>triceSeggerRTT.c</FileName>
